RESOLVED FIXED148764
After restoring tabs, swipes back to fast loading pages hang for 3 seconds
https://bugs.webkit.org/show_bug.cgi?id=148764
Summary After restoring tabs, swipes back to fast loading pages hang for 3 seconds
Tim Horton
Reported 2015-09-03 18:02:09 PDT
After restoring tabs, swipes back to fast loading pages hang for 3 seconds
Attachments
Patch (2.23 KB, patch)
2015-09-03 18:03 PDT, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2015-09-03 18:03:24 PDT
Tim Horton
Comment 2 2015-09-17 14:23:37 PDT
Note You need to log in before you can comment on or make changes to this bug.