After restoring tabs, swipes back to fast loading pages hang for 3 seconds https://bugs.webkit.org/show_bug.cgi?id=148764 <rdar://problem/22568860>

Reviewed by Beth Dakin.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::endSwipeGesture):
Don't wait for the render tree size threshold if we don't have one.


Canonical link: https://commits.webkit.org/167378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189932 268f45cc-cd09-0410-ab3c-d52691b4dbfc